--- a/styles/home.css
+++ b/styles/home.css
@@ -14,9 +14,13 @@ width: 200px;
 height: 500px;
 border: 7px solid hotpink;
 border-radius: 5px;
-padding: 10px;
+padding: 45px;
 margin: 10px;
 background-color: white;
+text-align: center;
+color: purple;
+font-size: 3rem;
+list-style: none;
 }
 
 #visors li h3 {
@@ -26,6 +30,7 @@ background-color: white;
     text-align: center;
     color: hotpink;
     text-shadow: 2px 2px 2px rgb(107, 105, 105);
+
 }
 
 
@@ -33,9 +38,16 @@ background-color: white;
     width: 200px;
     height: auto;
     padding: 10px;
+    text-align: center;
+ 
 }
 
 button {
-    margin: 10px;
+    margin: 20px;
+    text-align: center;
+    background-color: teal;
+    color: white;
+    font-size: large;
+    box-shadow: 3px 3px 3px darkgrey;
     
 }
